# FlexibleClusterAnalysis

./: .replit  INSTALL.md  OLLAMA_SETUP.md  README.md  app.py  config.py  database_schema.py  download_package.py  pyproject.toml  replit.md  setup_database.py
attached_assets/: Pasted-Please-create-a-flexible-unsupervised-learning-model-preferable-in-python-language-which-should-be--1750210783577_1750210783578.txt
data/: conscience_knowledge.json  knowledge_base.json  logic_knowledge.json  master_decisions.json  skills_acquired.json  user_interactions.json  user_profiles.json
models/: conscience_model.py  logic_model.py  master_model.py  personality_model.py
utils/: advanced_ml_models.py  chatgpt_optimization.py  content_filter.py  database_helper.py  emotion_detector.py  ml_analytics.py  ml_integration.py  ollama_helper.py  openai_helper.py  web_scraper.py
